--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "author": "Geoff Miller",
   "license": "MIT",
   "devDependencies": {
+    "@modelcontextprotocol/sdk": "^1.25.3",
     "@modelcontextprotocol/server-github": "^2025.4.8",
     "@modelcontextprotocol/server-puppeteer": "^2025.5.12"
   }
